tests/ui/range/issue-54505-no-literals.stderr
error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:16:16
   |
LL |     take_range(std::ops::Range { start: 0, end: 1 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `Range<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `std::ops::Range<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::Range { start: 0, end: 1 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:21:16
   |
LL |     take_range(::std::ops::Range { start: 0, end: 1 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `Range<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `std::ops::Range<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::Range { start: 0, end: 1 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:26:16
   |
LL |     take_range(std::ops::RangeFrom { start: 1 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeFrom<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeFrom<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::RangeFrom { start: 1 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:31:16
   |
LL |     take_range(::std::ops::RangeFrom { start: 1 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeFrom<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeFrom<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::RangeFrom { start: 1 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:36:16
   |
LL |     take_range(std::ops::RangeFull {});
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeFull`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeFull`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::RangeFull {});
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:41:16
   |
LL |     take_range(::std::ops::RangeFull {});
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeFull`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeFull`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::RangeFull {});
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:46:16
   |
LL |     take_range(std::ops::RangeInclusive::new(0, 1));
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeInclusive<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeInclusive<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::RangeInclusive::new(0, 1));
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:51:16
   |
LL |     take_range(::std::ops::RangeInclusive::new(0, 1));
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeInclusive<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeInclusive<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::RangeInclusive::new(0, 1));
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:56:16
   |
LL |     take_range(std::ops::RangeTo { end: 5 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeTo<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeTo<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::RangeTo { end: 5 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:61:16
   |
LL |     take_range(::std::ops::RangeTo { end: 5 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeTo<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeTo<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::RangeTo { end: 5 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:66:16
   |
LL |     take_range(std::ops::RangeToInclusive { end: 5 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeToInclusive<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeToInclusive<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&std::ops::RangeToInclusive { end: 5 });
   |                +

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-literals.rs:71:16
   |
LL |     take_range(::std::ops::RangeToInclusive { end: 5 });
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `RangeToInclusive<{integer}>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&_`
                 found struct `RangeToInclusive<{integer}>`
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: consider borrowing here
   |
LL |     take_range(&::std::ops::RangeToInclusive { end: 5 });
   |                +

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0308`.
